--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@discordjs/rest": "^1.1.0",
-    "aternode": "^1.1.3",
     "discord.js": "^14.6.0",
-    "mongoose": "^6.12.6",
-    "mysql": "^2.18.1"
+    "lowdb": "^7.0.1"
   }
 }
